--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">My Todo</a>
+            <a class="navbar-brand" href="/">My Todo</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -53,18 +53,18 @@
     </nav>
     <div class="container my-3">
         <h2>Add a Todo</h2>
-        <form>
+        <form action="/" method="POST">
   <div class="mb-3">
     <label for="title" class="form-label">Todo Title</label>
-    <input type="text" class="form-control" id="title" aria-describedby="emailHelp">
-
+    <input type="text" class="form-control" id="title" name="title" />
   </div>
   <div class="mb-3">
     <label for="desc" class="form-label">Todo Description</label>
-    <input type="text" class="form-control" id="desc">
+    <input type="text" class="form-control" id="desc" name="desc" />
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
     </div>
     <div class="container my-3">
         <h2>your Todos</h2>
@@ -72,31 +72,25 @@
   <thead>
     <tr>
       <th scope="col">Sno. </th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Title</th>
+      <th scope="col">Description</th>
+      <th scope="col">Time</th>
+      <th scope="col">Actions</th>
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
-    </tr>
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>@fat</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td>John</td>
-      <td>Doe</td>
-      <td>@social</td>
-    </tr>
-  </tbody>
+  {% for todo in allTodo %}
+  <tr>
+    <th scope="row">{{ loop.index }}</th>
+    <td>{{ todo.title }}</td>
+    <td>{{ todo.desc }}</td>
+    <td>{{ todo.date_created }}</td>
+    <td><button type="button" class="btn btn-dark">Dark</button>
+{{ todo.sno }}</td>
+  </tr>
+  {% endfor %}
+</tbody>
+
 </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
