--- a/templates/index.html
+++ b/templates/index.html
@@ -62,13 +62,17 @@
     <label for="desc" class="form-label">Todo Description</label>
     <input type="text" class="form-control" id="desc" name="desc" />
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-dark">Submit</button>
 </form>
 
     </div>
     <div class="container my-3">
         <h2>your Todos</h2>
-        <table class="table">
+      
+    {% if allTodo|length == 0 %}
+        no record
+    {% endif %}
+      <table class="table">
   <thead>
     <tr>
       <th scope="col">Sno. </th>
@@ -85,13 +89,16 @@
     <td>{{ todo.title }}</td>
     <td>{{ todo.desc }}</td>
     <td>{{ todo.date_created }}</td>
-    <td><button type="button" class="btn btn-dark">Dark</button>
-{{ todo.sno }}</td>
+    <td>
+      <a href="/delete/{{ todo.sno }}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
+      <a href="/delete/{{ todo.sno }}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
+    </td>
   </tr>
-  {% endfor %}
-</tbody>
+  </tbody>
 
 </table>
+  {% endfor %}
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
