Updated Flask project files and templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                    <button class="btn btn-outline-dark" type="submit">Search</button>
                 </form>
             </div>
         </div>
@@ -70,6 +70,9 @@
         <h2>your Todos</h2>
       
     {% if allTodo|length == 0 %}
+    <div class="alert alert-dark" role="alert">
+      No Todos found. Add your first todo now !
+    </div>
         no record
     {% endif %}
       <table class="table">
