Updated index.html with new form layout

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,5 @@
  {% extends 'base.html' %}
+ {% block title %} home {% endblock title %}-mytodo
  {% block body %}
  
     <div class="container my-3">
