--- a/templates/index.html
+++ b/templates/index.html
@@ -1,60 +1,61 @@
- {% extends 'base.html' %}
- {% block title %} home {% endblock title %}-mytodo
- {% block body %}
- 
-    <div class="container my-3">
-        <h2>Add a Todo</h2>
-        <form action="/" method="POST">
-  <div class="mb-3">
-    <label for="title" class="form-label">Todo Title</label>
-    <input type="text" class="form-control" id="title" name="title" />
-  </div>
-  <div class="mb-3">
-    <label for="desc" class="form-label">Todo Description</label>
-    <input type="text" class="form-control" id="desc" name="desc" />
-  </div>
-  <button type="submit" class="btn btn-dark">Submit</button>
-</form>
+{% extends 'base.html' %}
+{% block title %}Home - MyTodo{% endblock title %}
+{% block body %}
 
+<div class="container my-3">
+  <h2>Add a Todo</h2>
+  <form action="/" method="POST">
+    <div class="mb-3">
+      <label for="title" class="form-label">Todo Title</label>
+      <input type="text" class="form-control" id="title" name="title" />
     </div>
-    <div class="container my-3">
-        <h2>your Todos</h2>
-      
-    {% if allTodo|length == 0 %}
+    <div class="mb-3">
+      <label for="desc" class="form-label">Todo Description</label>
+      <input type="text" class="form-control" id="desc" name="desc" />
+    </div>
+    <button type="submit" class="btn btn-dark">Submit</button>
+  </form>
+</div>
+
+<div class="container my-3">
+  <h2>Your Todos</h2>
+
+  {% if allTodo|length == 0 %}
     <div class="alert alert-dark" role="alert">
-      No Todos found. Add your first todo now !
+      No Todos found. Add your first todo now!
     </div>
-        no record
-    {% endif %}
-      <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">Sno. </th>
-      <th scope="col">Title</th>
-      <th scope="col">Description</th>
-      <th scope="col">Time</th>
-      <th scope="col">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for todo in allTodo %}
-  <tr>
-    <th scope="row">{{ loop.index }}</th>
-    <td>{{ todo.title }}</td>
-    <td>{{ todo.desc }}</td>
-    <td>{{ todo.date_created }}</td>
-    <td>
-      <a href="/delete/{{ todo.sno }}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
-      <a href="/delete/{{ todo.sno }}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
-    </td>
-  </tr>
-  </tbody>
+  {% else %}
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Sno.</th>
+        <th scope="col">Title</th>
+        <th scope="col">Description</th>
+        <th scope="col">Time</th>
+        <th scope="col">Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for todo in allTodo %}
+      <tr>
+        <th scope="row">{{ loop.index }}</th>
+        <td>{{ todo.title }}</td>
+        <td>{{ todo.desc }}</td>
+        <td>{{ todo.date_created }}</td>
+        <td>
+          <!-- ✅ Fixed Update link -->
+          <a href="/update/{{ todo.sno }}" class="btn btn-outline-dark btn-sm mx-1">Update</a>
+          <!-- ✅ Fixed Delete link -->
+          <a href="/delete/{{ todo.sno }}" class="btn btn-outline-dark btn-sm mx-1">Delete</a>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% endif %}
+</div>
 
-</table>
-  {% endfor %}
-
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+  crossorigin="anonymous"></script>
 {% endblock body %}
